feat: add style

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -7,16 +7,17 @@
 	<title></title>
 	<style>
 		html, body, body > div, #container, #container-uiarea {
-			height: 100%;
+			height: 100%
 		}
 	</style>
 	<script
 			id="sap-ui-bootstrap"
 			src="resources/sap-ui-core.js"
-			data-sap-ui-theme="sap_horizon"
+			data-sap-ui-theme="sap_horizon"  
 			data-sap-ui-resourceroots='{
             "sap.ui.demo.todo": "."
         }'
+			data-sap-ui-flexibilityServices=""
 			data-sap-ui-oninit="module:sap/ui/core/ComponentSupport"
 			data-sap-ui-compatVersion="edge"
 			data-sap-ui-async="true"
@@ -25,6 +26,7 @@
 	</script>
 </head>
 <body class="sapUiBody sapUiSizeCompact" id="content">
+	
 <div data-sap-ui-component data-name="sap.ui.demo.todo" data-id="container" data-settings='{"id" : "sap.ui.demo.todo"}' data-handle-validation="true"></div>
 </body>
 </html>
